Fix navbar-brand not showing on desktop.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -184,11 +184,13 @@ body {
     float: left;
   }
 
-  .navbar-brand {
-    width: @site-menu-width;
-    text-indent: -9999px;
-    background: url("../img/logo.png") center no-repeat;
-  }
+}
+
+.navbar-brand {
+  width: @site-menu-width;
+  display: none;
+  text-indent: -9999px;
+  background: url("../img/logo.png") center no-repeat;
 }
 
 #m-btn-search {
